objects/ortoo_qra__Search_Filter_Row__c.object
<CustomObject>
    <description>Stores individual filters row for Search Filter object to store all kind of search filters across Q-assign configuration.</description>
    <fields>
        <fullName>ortoo_qra__Left1_Link_Via_Field__c</fullName>
        <description>If linking back to the Primary Object, the field on the Starting Object that links back to the Primary Object</description>
        <inlineHelpText>If linking back to the Primary Object, the field on the Starting Object that links back to the Primary Object</inlineHelpText>
        <label>Left1 Link Via Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Starting_Object__c</fullName>
        <description>The name of the lookup object. Can be the primary object (default). If we are traversing back to the Primary object from another object looking up to it, then the name of that starting object</description>
        <inlineHelpText>The name of the lookup object. Can be the primary object (default). If we are traversing back to the Primary object from another object looking up to it, then the name of that starting object</inlineHelpText>
        <label>Left1 Starting Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Treat_blank_values_as__c</fullName>
        <description>How to treat blank values in the field defined in Left1 Value1. Same functionality as in &quot;QA Member Matching Rule&quot;</description>
        <inlineHelpText>How to treat blank values in the field defined in Left1 Value1.</inlineHelpText>
        <label>Left1 Treat blank values as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ortoo_qra__TreatValuesAsOptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Treat_blank_values_as_x_Fixed_Val__c</fullName>
        <description>The fixed value if &quot;Left1 Treat blank values as&quot; is &quot;Fixed Value&quot;</description>
        <inlineHelpText>The fixed value if &quot;Left1 Treat blank values as&quot; is &quot;Fixed Value&quot;</inlineHelpText>
        <label>Left1 Treat blank values as - Fixed Val</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Left1_Value1__c</fullName>
        <description>Fist left hand side value field</description>
        <inlineHelpText>Fist left hand side value field</inlineHelpText>
        <label>Left1 Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <description>The operator between left and right hand side values</description>
        <inlineHelpText>The operator between left and right hand side values</inlineHelpText>
        <label>Operator</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Order__c</fullName>
        <description>Order of the filter row with respect to others.</description>
        <inlineHelpText>Order of the filter row with respect to others.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Parent__c</fullName>
        <description>Master detail relationship with Filter Row</description>
        <inlineHelpText>Master detail relationship with Filter Row</inlineHelpText>
        <label>Parent</label>
        <referenceTo>ortoo_qra__Search_Filter__c</referenceTo>
        <relationshipLabel>QA Search Filter Row</relationshipLabel>
        <relationshipName>QA_Search_Filter_Row</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right1_Value1__c</fullName>
        <description>Fist right hand side value field</description>
        <inlineHelpText>Fist right hand side value field</inlineHelpText>
        <label>Right1 Value1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Search Filter Row</label>
    <nameField>
        <label>Search Filter Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Search Filter Row</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>